# sakiko

./: .gitignore  Cargo.toml  LICENSE  README..md  README.md  demo.yaml
demo/: demo.yaml  demo2.yaml  demo3.yaml  error.yaml
docs/: API.md  DEVELOP.md  GRAMMAR.md  USAGE.md
src/: check.rs  compare.rs  config.rs  lib.rs  main.rs  operation.rs  output.rs  sakiko.rs  variable.rs
