[package]
name = "sakiko"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
url = { version = "2", features = ["serde"] }
futures-util = "0.3"
tokio-tungstenite = "*"
tungstenite = "*"
serde_yaml = "0.9"
rand = "0.8.0"
regex = "1"
log = "0.4"
env_logger = "0.9"